--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,35 +1,14 @@
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+<link 
+  rel="stylesheet" 
+  href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" 
+/>
 
+<ng-container *ngIf="!isLoggedIn">
+  <!-- Mostrar componente de login si no está logueado -->
+  <app-login (loginSuccess)="onLoginSuccess($event)"></app-login>
+</ng-container>
 
-
-<mat-sidenav-container class="sidenav-container">
-    <!-- Menú lateral -->
-    <mat-sidenav #sidenav mode="side" [(opened)]="opened" class="sidenav">
-      <mat-toolbar>Menú</mat-toolbar>
-      <mat-nav-list>
-        <a mat-list-item routerLink="/">Inicio</a>
-        <a mat-list-item routerLink="/productos">Productos</a>
-        <a mat-list-item routerLink="/categorias">Categorías</a>
-        <a mat-list-item routerLink="/lista-precios">Lista de Precios</a>
-      </mat-nav-list>
-    </mat-sidenav>
-  
-    <!-- Contenido principal -->
-    <mat-sidenav-content [ngClass]="{ 'sidenav-open': !opened }">
-      <mat-toolbar color="primary">
-        <!-- Icono de 3 rayitas para mostrar/ocultar el menú -->
-        <button mat-icon-button (click)="sidenav.toggle()">
-          <mat-icon>menu</mat-icon>
-        </button>
-        <!-- <span>Productos</span> -->
-      </mat-toolbar>
-  
-      <!-- Contenido de las rutas -->
-      <router-outlet></router-outlet>
-    </mat-sidenav-content>
-  </mat-sidenav-container>
-  
-
-
-
-  
+<ng-container *ngIf="isLoggedIn">
+  <!-- Aquí puedes poner el contenido que debe mostrarse cuando el usuario esté logueado -->
+  <router-outlet></router-outlet>
+</ng-container>
