--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,11 +1,28 @@
-<div class="login-container">
-    <div class="login-box">
-      <h2>Iniciar Sesión</h2>
-      <form (submit)="onLogin()">
-        <input type="text" [(ngModel)]="usuario" name="usuario" placeholder="Usuario" required />
-        <input type="password" [(ngModel)]="pass" name="pass" placeholder="Contraseña" required />
-        <button type="submit">Iniciar sesión</button>
-      </form>
+<div class="login-container" style="background: url('/assets/fondo-login/fondo-estetic.png') no-repeat center center fixed; background-size: cover;">
+  <div class="login-box">
+    <h2>Iniciar Sesión</h2>
+    <!-- Usa el formulario reactivo -->
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+      <!-- Campo para el usuario -->
+      <input 
+        type="text" 
+        formControlName="usu_usuario" 
+        placeholder="Usuario" 
+        required 
+      />
+      <!-- Campo para la contraseña -->
+      <input 
+        type="password" 
+        formControlName="usu_password" 
+        placeholder="Contraseña" 
+        required 
+      />
+      <!-- Botón para enviar el formulario -->
+      <button type="submit" [disabled]="loginForm.invalid">Iniciar sesión</button>
+    </form>
+    <!-- Mensaje de error -->
+    <div *ngIf="errorMessage" class="error-message">
+      {{ errorMessage }}
     </div>
   </div>
-  
+</div>
